# bbs

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
include/: application.hpp
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt
tests/application/src/: main.cpp
tests/application/src/stubs/scheduler/: executor.cpp
tests/aux/handlers/: dummyhandler.hpp
tests/exceptions/: CMakeLists.txt
tests/exceptions/filenotfoundexception/: CMakeLists.txt
tests/exceptions/filenotfoundexception/src/: main.cpp
tests/fakes/parser/lexer/: lexer.hpp
tests/lexer/: CMakeLists.txt
tests/lexer/context/: CMakeLists.txt
tests/lexer/context/src/: main.cpp
tests/lexer/exceptions/: CMakeLists.txt
tests/lexer/exceptions/fileemptyexception/: CMakeLists.txt
tests/lexer/exceptions/fileemptyexception/src/: main.cpp
tests/lexer/exceptions/filenotfoundexception/: CMakeLists.txt
tests/lexer/exceptions/filenotfoundexception/src/: main.cpp
tests/lexer/exceptions/unexpectedlexemeexception/: CMakeLists.txt
tests/lexer/exceptions/unexpectedlexemeexception/src/: main.cpp
tests/lexer/handlers/: CMakeLists.txt
tests/lexer/handlers/handler/: CMakeLists.txt
tests/lexer/handlers/handler/src/: main.cpp
tests/lexer/handlers/operatorhandler/: CMakeLists.txt
tests/lexer/handlers/operatorhandler/src/: main.cpp
tests/lexer/handlers/punctuatorhandler/: CMakeLists.txt
tests/lexer/handlers/punctuatorhandler/src/: main.cpp
tests/lexer/handlers/separatorhandler/: CMakeLists.txt
tests/lexer/handlers/separatorhandler/src/: main.cpp
tests/lexer/handlers/wordhandler/: CMakeLists.txt
tests/lexer/handlers/wordhandler/src/: main.cpp
tests/lexer/lexer/: CMakeLists.txt
tests/lexer/lexer/src/: main.cpp
tests/lexer/scanner/: CMakeLists.txt
tests/lexer/scanner/src/: main.cpp
tests/mocks/parser/lexer/handlers/: handler.hpp
tests/parser/: CMakeLists.txt
tests/parser/exceptions/: CMakeLists.txt
tests/parser/exceptions/existingprojectexception/: CMakeLists.txt
tests/parser/exceptions/existingprojectexception/src/: main.cpp
tests/parser/exceptions/nonexistentprojectexception/: CMakeLists.txt
tests/parser/exceptions/nonexistentprojectexception/src/: main.cpp
tests/parser/exceptions/undeclaredvariableexception/: CMakeLists.txt
tests/parser/exceptions/undeclaredvariableexception/src/: main.cpp
tests/parser/exceptions/unexpectedtokenexception/: CMakeLists.txt
tests/parser/exceptions/unexpectedtokenexception/src/: main.cpp
tests/parser/lexer/: CMakeLists.txt
tests/parser/lexer/context/: CMakeLists.txt
tests/parser/lexer/context/src/: main.cpp
tests/parser/lexer/exceptions/: CMakeLists.txt
tests/parser/lexer/lexer/: CMakeLists.txt
tests/parser/lexer/scanner/: CMakeLists.txt
tests/parser/mediator/: CMakeLists.txt
tests/parser/mediator/src/: main.cpp
tests/parser/parser/: CMakeLists.txt
tests/parser/parser/src/: main.cpp
tests/parser/states/: CMakeLists.txt
tests/parser/states/keyword/: CMakeLists.txt
tests/parser/states/keywords/: CMakeLists.txt
tests/parser/states/state/: CMakeLists.txt
tests/parser/states/statement/: CMakeLists.txt
tests/parser/states/types/: CMakeLists.txt
tests/parser/states/variable/: CMakeLists.txt
tests/parser/tokens/: CMakeLists.txt
tests/parser/tokens/operator/: CMakeLists.txt
tests/parser/tokens/punctuator/: CMakeLists.txt
tests/parser/tokens/separator/: CMakeLists.txt
tests/parser/tokens/token/: CMakeLists.txt
tests/parser/tokens/word/: CMakeLists.txt
tests/scheduler/: CMakeLists.txt
tests/scheduler/exceptions/: CMakeLists.txt
tests/scheduler/exceptions/compilationerrorexception/: CMakeLists.txt
tests/scheduler/exceptions/linkerrorexception/: CMakeLists.txt
tests/scheduler/exceptions/nofilesspecifiedexception/: CMakeLists.txt
tests/scheduler/exceptions/postcompilationcommandexception/: CMakeLists.txt
tests/scheduler/exceptions/precompilationcommandexception/: CMakeLists.txt
tests/scheduler/executor/: CMakeLists.txt
tests/scheduler/executor/src/: main.cpp
tests/scheduler/pipeline/: CMakeLists.txt
tests/scheduler/pipeline/job/: CMakeLists.txt
tests/scheduler/pipeline/pipeline/: CMakeLists.txt
tests/stubs/exceptions/: filenotfoundexception.cpp
tests/stubs/lexer/: context.cpp  lexer.cpp  scanner.cpp
tests/stubs/lexer/exceptions/: fileemptyexception.cpp  filenotfoundexception.cpp  unexpectedlexemeexception.cpp
tests/stubs/lexer/handlers/: handler.cpp  operatorhandler.cpp  punctuatorhandler.cpp  separatorhandler.cpp  wordhandler.cpp
tests/stubs/parser/: mediator.cpp  parser.cpp
tests/stubs/parser/exceptions/: existingprojectexception.cpp  nonexistentprojectexception.cpp  undeclaredvariableexception.cpp  unexpectedendoffileexception.cpp  unexpectedkeywordexception.cpp  unexpectedtokenexception.cpp
tests/stubs/parser/lexer/: context.cpp  lexer.cpp  scanner.cpp
tests/stubs/parser/states/: keyword.cpp  state.cpp  statement.cpp  variable.cpp
tests/stubs/parser/tokens/: operator.cpp  punctuator.cpp  separator.cpp  word.cpp
tests/stubs/scheduler/: executor.cpp
tests/stubs/scheduler/exceptions/: compilationerrorexception.cpp  linkerrorexception.cpp  nofilesspecifiedexception.cpp  postcompilationcommandexception.cpp  precompilationcommandexception.cpp
tests/stubs/scheduler/pipeline/: job.cpp  pipeline.cpp
tests/stubs/sys/exceptions/: compilationerrorexception.cpp  unsupportedcompilerexception.cpp
tests/stubs/sys/tools/: compilerfactory.cpp
tests/sys/: CMakeLists.txt
tests/sys/exceptions/: CMakeLists.txt
tests/sys/exceptions/compilationerrorexception/: CMakeLists.txt
tests/sys/exceptions/unsupportedcompilerexception/: CMakeLists.txt
tests/sys/nix/: CMakeLists.txt
tests/sys/nix/command/: CMakeLists.txt
tests/sys/tools/: CMakeLists.txt
tests/sys/tools/compilerfactory/: CMakeLists.txt
tests/sys/tools/compilers/: CMakeLists.txt
tests/utils/: CMakeLists.txt
tests/utils/bufferedlogger/: CMakeLists.txt
tests/utils/bufferedlogger/src/: main.cpp
tests/utils/logger/: CMakeLists.txt
tests/utils/logger/src/: main.cpp
(+276 files in other folders)
